[project]
name = "odoo-addons-oca-contract"
version = "18.0.20250729.1"
dependencies = [
    "odoo-addon-contract==18.0.*",
    "odoo-addon-contract_forecast==18.0.*",
    "odoo-addon-contract_forecast_variable_quantity==18.0.*",
    "odoo-addon-contract_invoice_auto_validate==18.0.*",
    "odoo-addon-contract_invoice_start_end_dates==18.0.*",
    "odoo-addon-contract_line_successor==18.0.*",
    "odoo-addon-contract_payment_mode==18.0.*",
    "odoo-addon-contract_sale==18.0.*",
    "odoo-addon-contract_termination==18.0.*",
    "odoo-addon-contract_variable_qty_prorated==18.0.*",
    "odoo-addon-contract_variable_quantity==18.0.*",
    "odoo-addon-product_contract==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
